# actual-chat

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ActualChat.CI.slnf  ActualChat.Maui.sln  ActualChat.Maui.sln.DotSettings  ActualChat.sln  ActualChat.sln.DotSettings  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Docker-Start-DBs.cmd  Docker-Start-Observability.cmd  Docker-Start.cmd  Dockerfile  EF-Migration.cmd  NOTES.md  Npm-Install.cmd  Npm-Watch.cmd  Packages.props  README.md  Rider-WithTieredPGO.cmd  Run-MultiHost.cmd  Run-NpmWatch.cmd  Run-Prebuilt.cmd  Run-Published.cmd  Run-Watch.cmd  Run.cmd  add-hosts.cmd  android-emulator-setup.cmd  chat  chat.cmd  clean.cmd  dependensee.Dockerfile  docker-compose.imageproxy.yml  docker-compose.integration-tests.yml  docker-compose.mariadb.yml  docker-compose.observability.yml  docker-compose.proxy.yml  (+46 more)
.config/: dotnet-tools.json
.config/maui/: sign_app.cer
.github/workflows/: build-monitor.yml  build-nats.yml  build-test-deploy-dev.yml  create-release-branch.yml  deploy-win-to-msft-store.yml  deploy.dev.yml  deploy.prod.yml  integration-tests.yml  publish-ios.yml  (+4 more)
.run/: App.Maui.run.xml  App.Server (AY).run.xml  App.Server.run.xml  ClientApp.run.xml  Host.run.xml
docs/: BigTasks.md  Places.md  Search.md  SmallTasks.md  TaskList-AY.md  Tasks.md  dependencies.html
resources/: App.Maui_1.11.304.0_x64.msix
services/: elastic.compose.yaml  opensearch.compose.yaml
services/chatbot/: .gitignore  .secrets  Dockerfile  Makefile  README.md  pyproject.toml
services/chatbot/.devcontainer/: Containerfile  devcontainer.json
services/chatbot/app/: __init__.py  __main__.py  chain.py  server.py  state.py  utils.py
services/chatbot/app/prompts/: __init__.py
services/chatbot/app/runnables/: __init__.py  configurable.py
services/chatbot/app/runnables/configurable/: __init__.py  configurable_agent_executor.py  runtime_alternatives.py
services/chatbot/app/test/: classifier_tool_test.py  graph.md  human_input_test.py  human_input_test2.py  test.py
services/chatbot/app/tools/: __init__.py  reset.py  resolver.py
services/chatbot/tests/app/: test_chain.py
services/chatbot/tests/app/tools/: test_resolver.py
src/: Directory.Build.props
tests/: .editorconfig  Directory.Build.props  Directory.Build.targets  template.xunit.runner.json
(+8424 files in other folders)
