[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Andrew Kurochkin <andrew.kurochkin@actual.chat>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "~3.12.2"
uvicorn = "^0.23.2"
langchain = "0.3.1"
langchain-core = "0.3.6"
langgraph = "0.2.28"
langchain-anthropic = "0.2.1"
langserve = {extras = ["server"], version = "0.3.0"}
pydantic = "2.9.2"
cleandoc = "0.0.13"
anthropic = "0.34.2"
# TODO: remove
# Obsolete:
# langchainhub = "0.1.15"
langfuse = "2.40.0"
pyjwt = {extras = ["crypto"], version = "2.8.0"}

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
